# schedule-to-cal-rs

./: .cred.json  .env  Cargo.toml  README.md  cred.p12  creds.json
.github/workflows/: update.yml
src/: main.rs  secret
